# Neural-Networks-Fusion

./: README.md  auto_crop_image.py  conversion.py  crop_image.py  fusion.py  fusion_v2.py  fusion_v3.py  get_video.py  predict.py  prueba_imagen.py  prueba_img.sh  prueba_video.sh  ros2.sh  tiempo_procesado.txt  video_fusion.py
Documentation/: TFG-Pedro_Peña.pptx
Parte_entrenamiento_yolov8/: Dockerfile  Dockerfile_ros2  custom_dataset.yaml  main.py  train.py
results/train_rgb/: args.yaml  results.csv
results/train_rgb2/: args.yaml  events.out.tfevents.1684431027.a7c8ee7ec3e9.4698.0  results.csv
results/train_term/: args.yaml  results.csv
results/train_term2/: args.yaml  events.out.tfevents.1684855647.a7c8ee7ec3e9.5323.0  results.csv
ros2_ws/src/yolov8_ros/: README.md
ros2_ws/src/yolov8_ros/yolov8_bringup/: package.xml
ros2_ws/src/yolov8_ros/yolov8_bringup/launch/: prueba_ros.launch.py
ros2_ws/src/yolov8_ros/yolov8_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/yolov8_ros/yolov8_msgs/msg/: BoundingBox2D.msg  Detection.msg  DetectionArray.msg  Vector2.msg
ros2_ws/src/yolov8_ros/yolov8_ros/: package.xml  setup.py
ros2_ws/src/yolov8_ros/yolov8_ros/yolov8_ros/: fusion_ros.py  img_publisher.py  prueba_ros.py  save_img.py  visualization.py
