<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yolov8_ros</name>
  <version>0.0.0</version>
  <description>YOLOv8 for ROS 2</description>
  <maintainer email="pedrop@uma.es">Pedro Antonio Peña Puente</maintainer>
  <license>GPL-3</license>

  <depend>cv_bridge</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
